--- a/index.html
+++ b/index.html
@@ -2,17 +2,39 @@
 <html lang="en">
   <head>
     <link href="http://fonts.cdnfonts.com/css/mark-pro" rel="stylesheet" />
+    <script src="https://unpkg.com/phosphor-icons"></script>
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/pages/signIn.css" />
     <title>Static Template</title>
   </head>
   <body>
-    <h1>
-      This is a static template, there is no bundler or bundling involved!
-    </h1>
+    <form class="signIn">
+      <div class="signIn__input-container">
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Usuário"
+          class="signIn__input input"
+        />
+        <i class="ph-user-thin input-container__icon"></i>
+      </div>
+      <div class="signIn__input-container">
+        <input
+          type="password"
+          name="password"
+          id="password"
+          placeholder="Senha"
+          class="signIn__input input"
+        />
+        <i class="ph-lock-thin input-container__icon"></i>
+      </div>
+      <button type="submit" class="signIn__button">Continuar</button>
+    </form>
   </body>
 </html>
