--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <link href="http://fonts.cdnfonts.com/css/mark-pro" rel="stylesheet" />
     <script src="https://unpkg.com/phosphor-icons"></script>
