Add background image sign in page

--- a/index.html
+++ b/index.html
@@ -13,28 +13,30 @@
     <title>Static Template</title>
   </head>
   <body>
-    <form class="signIn">
-      <div class="signIn__input-container">
-        <input
-          type="email"
-          name="email"
-          id="email"
-          placeholder="Usuário"
-          class="signIn__input input"
-        />
-        <i class="ph-user-thin input-container__icon"></i>
-      </div>
-      <div class="signIn__input-container">
-        <input
-          type="password"
-          name="password"
-          id="password"
-          placeholder="Senha"
-          class="signIn__input input"
-        />
-        <i class="ph-lock-thin input-container__icon"></i>
-      </div>
-      <button type="submit" class="signIn__button">Continuar</button>
-    </form>
+    <main>
+      <form class="signIn">
+        <div class="signIn__input-container">
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Usuário"
+            class="signIn__input input"
+          />
+          <i class="ph-user-thin input-container__icon"></i>
+        </div>
+        <div class="signIn__input-container">
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="Senha"
+            class="signIn__input input"
+          />
+          <i class="ph-lock-thin input-container__icon"></i>
+        </div>
+        <button type="submit" class="signIn__button">Continuar</button>
+      </form>
+    </main>
   </body>
 </html>
