--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           />
           <i class="ph-lock-thin input-container__icon"></i>
         </div>
-        <button type="submit" class="signIn__button">Continuar</button>
+        <button type="submit" class="signIn__button button">Continuar</button>
       </form>
     </main>
   </body>
