Add timer component and compass logo

--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="../styles/pages/home.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="../assets/images/LogoCompass.png" alt="Logo compass.uol" />
+      <div class="header__time">
+        <strong>10:58</strong>
+        <p>27 setembro de 2022</p>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/locale/pt-br.min.js"></script>
+    <script src="../scripts/timer.js"></script>
+  </body>
 </html>
