--- a/pages/home.html
+++ b/pages/home.html
@@ -19,14 +19,14 @@
         <p>27 setembro de 2022</p>
       </div>
       <div class="header__weather">
-        <p class="weather__location">belém, PA</p>
+        <p class="weather__location"></p>
         <div class="weather__weather">
           <img
             src="//cdn.weatherapi.com/weather/64x64/night/116.png"
             alt="clima"
             class="weather__img"
           />
-          <p class="weather__temp">30º</p>
+          <p class="weather__temp"></p>
         </div>
       </div>
     </header>
