--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="http://fonts.cdnfonts.com/css/mark-pro" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -31,7 +32,24 @@
       </div>
     </header>
     <main></main>
-    <footer></footer>
+    <footer class="footer">
+      <p class="footer__title">
+        Essa janela do navegador é usada para manter sua sessão de autenticação
+        ativa. Deixe-a aberta em segundo plano e abra uma nova janela para
+        continuar a navegar.
+      </p>
+      <div class="footer__timer">
+        <p>Application refresh in</p>
+        <span>600</span>
+        <p>seconds</p>
+      </div>
+      <nav class="links">
+        <a href="https://noticias.uol.com.br/" target="_blank"
+          >Continuar Navegando</a
+        >
+        <a href="https://noticias.uol.com.br/" target="_blank">Logout</a>
+      </nav>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/locale/pt-br.min.js"></script>
     <script src="../scripts/timer.js"></script>
