Add some footer css

--- a/pages/home.html
+++ b/pages/home.html
@@ -38,17 +38,19 @@
         ativa. Deixe-a aberta em segundo plano e abra uma nova janela para
         continuar a navegar.
       </p>
-      <div class="footer__timer">
-        <p>Application refresh in</p>
-        <span>600</span>
-        <p>seconds</p>
+      <div class="footer__container">
+        <div class="footer__timer">
+          <p>Application refresh in</p>
+          <span>600</span>
+          <p>seconds</p>
+        </div>
+        <nav class="links">
+          <a href="https://noticias.uol.com.br/" target="_blank"
+            >Continuar Navegando</a
+          >
+          <a href="https://noticias.uol.com.br/" target="_blank">Logout</a>
+        </nav>
       </div>
-      <nav class="links">
-        <a href="https://noticias.uol.com.br/" target="_blank"
-          >Continuar Navegando</a
-        >
-        <a href="https://noticias.uol.com.br/" target="_blank">Logout</a>
-      </nav>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/locale/pt-br.min.js"></script>
