Add countdown css

--- a/pages/home.html
+++ b/pages/home.html
@@ -41,8 +41,10 @@
       <div class="footer__container">
         <div class="footer__timer">
           <p>Application refresh in</p>
-          <span>600</span>
-          <p>seconds</p>
+          <div class="timer__countdown">
+            <strong>600</strong>
+            <p>seconds</p>
+          </div>
         </div>
         <nav class="links">
           <a href="https://noticias.uol.com.br/" target="_blank"
