Add footer links css

--- a/pages/home.html
+++ b/pages/home.html
@@ -47,10 +47,18 @@
           </div>
         </div>
         <nav class="links">
-          <a href="https://noticias.uol.com.br/" target="_blank"
+          <a
+            href="https://noticias.uol.com.br/"
+            target="_blank"
+            class="links__link link--primary"
             >Continuar Navegando</a
           >
-          <a href="https://noticias.uol.com.br/" target="_blank">Logout</a>
+          <a
+            href="https://noticias.uol.com.br/"
+            target="_blank"
+            class="links__link link--secondary"
+            >Logout</a
+          >
         </nav>
       </div>
     </footer>
