--- a/pages/home.html
+++ b/pages/home.html
@@ -31,7 +31,24 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="main__title">
+        <h2 class="sm">Our mission is</h2>
+        <h3>Nossa missão é</h3>
+      </div>
+      <div class="main__title">
+        <h2>to transform the world</h2>
+        <h3>transformar o mundo</h3>
+      </div>
+      <div class="main__title">
+        <h2>building digital experiences</h2>
+        <h3>construindo experiências digitais</h3>
+      </div>
+      <div class="main__title">
+        <h2>that enable our client’s growth</h2>
+        <h3>que permitam o crescimento dos nossos clientes</h3>
+      </div>
+    </main>
     <footer class="footer">
       <p class="footer__title">
         Essa janela do navegador é usada para manter sua sessão de autenticação
