--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 class="signIn__title">Login</h1>
         <div class="signIn__input-container">
           <input
-            type="email"
+            type="text"
             name="email"
             id="email"
             placeholder="Usuário"
@@ -47,5 +47,6 @@
       </form>
     </main>
     <script src="scripts/login.js"></script>
+    <script src="scripts/signInPage.js"></script>
   </body>
 </html>
