--- a/pages/home.html
+++ b/pages/home.html
@@ -70,9 +70,8 @@
             class="links__link link--primary"
             >Continuar Navegando</a
           >
-          <a
-            href="https://noticias.uol.com.br/"
-            target="_blank"
+          <button
+            onclick="logout()"
             class="links__link link--secondary"
             >Logout</a
           >
@@ -83,5 +82,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/locale/pt-br.min.js"></script>
     <script src="../scripts/timer.js"></script>
     <script src="../scripts/weather.js"></script>
+    <script src="../scripts/login.js"></script>
+    <script src="../scripts/homePage.js"></script>
   </body>
 </html>
