--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/pages/signIn.css" />
     <title>Static Template</title>
