Update all pages title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/pages/signIn.css" />
-    <title>Static Template</title>
+    <title>Compass - Login</title>
   </head>
   <body>
     <main>
