--- a/pages/home.html
+++ b/pages/home.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../styles/pages/home.css" />
-    <title>Document</title>
+    <title>Compass - Home</title>
   </head>
   <body>
     <header class="header">
