Update signIn background image

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <button type="submit" class="signIn__button button">Continuar</button>
       </form>
     </main>
+    <figure class="signIn__bg">
+      <img src="assets/images/LogoCompassoBranco.png" alt="Logo Compass.uol" />
+    </figure>
     <script src="scripts/login.js"></script>
     <script src="scripts/signInPage.js"></script>
   </body>
