Fix logout function

--- a/pages/home.html
+++ b/pages/home.html
@@ -72,7 +72,7 @@
             >Continuar Navegando</a
           >
           <button
-            onclick="logout()"
+            onclick="handleLogout()"
             class="links__link link--secondary"
             >Logout</a
           >
